--- a/date/2024-12/page-4.htm
+++ b/date/2024-12/page-4.htm
@@ -300,8 +300,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-32997.htm">狗粮制造机多少钱（狗粮加工机多少钱）</a></h4>
-                <p>摘要：       今天给各位分享狗粮制造机多少钱的知识，其中也会对狗粮加工机多少钱进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、投资一个狗粮加工厂大约需多.</p>
+                <h4><a href="/news/article-42247.htm">动物打疫苗注意事项及禁忌有哪些（动物打疫苗前后要注意什么）</a></h4>
+                <p>摘要：       今天给各位分享动物打疫苗注意事项及禁忌有哪些的知识，其中也会对动物打疫苗前后要注意什么进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、狗狗.</p>
             </div>
         </div>
     </div>
@@ -310,8 +310,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-19495.htm">小动物疫苗注射证明是疫苗本吗 动物疫苗注射证明怎么开</a></h4>
-                <p>摘要：       大家好，今天小编关注到一个比较有意思的话题，就是关于小动物疫苗注射证明是疫苗本吗的问题，于是小编就整理了2个相关介绍小动物疫苗注射证明是疫苗本吗的解答，让我们一起看看吧。宠物疫苗本</p>
+                <h4><a href="/free-nodes/2024-11-7-free-clash-subscribe.htm">11月7日更新19.1M/S，2024年最新高速V2ray/SSR/Clash/Shadowrocket订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了美国、日本、新加坡、加拿大、欧洲、韩国、香港等地区,最高速度可达19.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -320,8 +320,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-11-1-free-v2ray-subscribe.htm">11月1日更新20.7M/S，2024年最新高速Shadowrocket/V2ray/SSR/Clash订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了日本、美国、新加坡、韩国、加拿大、香港、欧洲等地区,最高速度可达20.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2025-1-7-clash-node.htm">1月7日更新23M/S，2025年最新高速SSR/V2ray/Clash/Shadowrocket订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了日本、新加坡、加拿大、韩国、欧洲、香港、美国等地区,最高速度可达23 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -330,8 +330,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-25011.htm">Logback及其MDC功能详解</a></h4>
-                <p>Logback日志系统是SLF4J的原生实现。同时，Logback也是Log4j的继任者，补全了Log4j的不足。 1.&nbsp;Logback的模块组成  logback-core，其他模块的功能</p>
+                <h4><a href="/free-nodes/2024-11-21-clash-v2ray-ss-ssr.htm">11月21日更新21M/S，2024年最新高速V2ray/SSR/Shadowrocket/Clash订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了香港、加拿大、日本、美国、韩国、欧洲、新加坡等地区,最高速度可达21 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -340,8 +340,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-1-15-free-high-speed-nodes.htm">1月15日更新18.4M/S，2025年最新高速Shadowrocket/Clash/V2ray/SSR订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了美国、香港、加拿大、新加坡、欧洲、日本、韩国等地区,最高速度可达18.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/news/article-20411.htm">去宠物店给猫咪驱虫一次多少钱（去宠物店给猫咪驱虫多少钱?）</a></h4>
+                <p>摘要：       今天给各位分享去宠物店给猫咪驱虫一次多少钱的知识，其中也会对去宠物店给猫咪驱虫多少钱?进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、去宠.</p>
             </div>
         </div>
     </div>
@@ -350,8 +350,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-23620.htm">kotlin 标准函数和静态方法 with、run、apply</a></h4>
-                <p>一.标准函数 1.with函数 with函数接受两个参数，第一个是任意类型的对象，第二个是lambda表达式。 作用：连续调用同一对象的多个方法。返回值是最后一个值 格式如下： val result </p>
+                <h4><a href="/news/article-34429.htm">宠物领养合同有法律效应吗 宠物领养合同有法律效应吗知乎</a></h4>
+                <p>摘要：       大家好，今天小编关注到一个比较有意思的话题，就是关于宠物领养合同有法律效应吗的问题，于是小编就整理了5个相关介绍宠物领养合同有法律效应吗的解答，让我们一起看看吧。签订领养宠物协议靠</p>
             </div>
         </div>
     </div>
@@ -360,8 +360,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-27336.htm">ruby 版本管理RVM （ruby version manager）</a></h4>
-                <p>macOS. 自带的ruby 版本目录权限比较高， 经常有很多 操作需要权限而不能执行   虽然 macOS 自带了一个 ruby 环境，但是是系统自己使用的，所以权限很小，只有 system。   </p>
+                <h4><a href="/free-nodes/2024-12-31-free-shadowrocket-node.htm">12月31日更新20.4M/S，2025年最新高速SSR/V2ray/Shadowrocket/Clash订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了美国、欧洲、日本、新加坡、加拿大、香港、韩国等地区,最高速度可达20.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -370,8 +370,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-10-9-free-subscribe-node.htm">10月9日更新21.1M/S，2024年最新高速Shadowrocket/Clash/V2ray/SSR订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了美国、新加坡、韩国、日本、香港、欧洲、加拿大等地区,最高速度可达21.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/news/article-32045.htm">内江宠物乐园哪家好（昆明宠物乐园哪家好）</a></h4>
+                <p>摘要：       今天给各位分享内江宠物乐园哪家好的知识，其中也会对昆明宠物乐园哪家好进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、内江宠物交易市场在哪..</p>
             </div>
         </div>
     </div>
@@ -380,8 +380,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-33951.htm">比熊犬专用狗粮推荐（比熊犬专用狗粮推荐一下）</a></h4>
-                <p>摘要：       今天给各位分享比熊犬专用狗粮推荐的知识，其中也会对比熊犬专用狗粮推荐一下进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、比熊吃什么狗粮比较.</p>
+                <h4><a href="/free-nodes/2024-12-24-free-high-speed-nodes.htm">12月24日更新21.3M/S，2024年最新高速V2ray/Clash/Shadowrocket/SSR订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了香港、新加坡、美国、日本、韩国、欧洲、加拿大等地区,最高速度可达21.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -390,8 +390,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-11-9-free-high-speed-nodes.htm">11月9日更新19.9M/S，2024年最新高速Shadowrocket/V2ray/SSR/Clash订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了日本、韩国、加拿大、新加坡、美国、香港、欧洲等地区,最高速度可达19.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-11-14-clash-v2ray-ss-ssr.htm">11月14日更新20.2M/S，2024年最新高速Clash/Shadowrocket/SSR/V2ray订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了韩国、加拿大、日本、美国、香港、新加坡、欧洲等地区,最高速度可达20.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -402,7 +402,7 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                                <h4><span class="badge" style="float: right;">72</span> <a href="/date/2025-01/" title="2025-01 归档">2025-01</a></h4>
+                                <h4><span class="badge" style="float: right;">78</span> <a href="/date/2025-01/" title="2025-01 归档">2025-01</a></h4>
                                 <h4><span class="badge" style="float: right;">93</span> <a href="/date/2024-12/" title="2024-12 归档">2024-12</a></h4>
                                 <h4><span class="badge" style="float: right;">34</span> <a href="/date/2024-11/" title="2024-11 归档">2024-11</a></h4>
                                 <h4><span class="badge" style="float: right;">25</span> <a href="/date/2024-10/" title="2024-10 归档">2024-10</a></h4>
